# OBI

./: .gitignore  Ogro.py  entrevista.py  explicando.cpp
EmCpp/: Fatorial.cpp  Firbonacci.cpp  MediaInteira.cpp  Moedas.cpp  MáximoDivisorComum.cpp  SomaColunaMatrizes.cpp  irmãos.cpp  tempCodeRunnerFile.cpp
EmCpp/Fase1Nivel2/Fase1Nivel22025/: cafeteria.cpp
EmCpp/Fase1Nivel2024/: ogro.cpp  relogio.cpp
EmCpp/Fase1Nivel22020/: fissura.cpp  pandemia.cpp  teste.cpp
EmCpp/Fase1Nivel22021/: idade.cpp  tempo.cpp
EmCpp/Fase1Nivel22022/: chuva.cpp  hotel.cpp  maiorValor.cpp
EmCpp/Fase1Nivel22023/: toupeira.cpp
EmCpp/Fase1Nivel22024/: ConCurso.cpp
EmCpp/Fase1Nivel22025/: barras.cpp  dieta.cpp
EmCpp/SimuladosFase1/Fase1Nivel22020/: acelerador.cpp
EmCpp/SimuladosFase1/Fase1Nivel22021/: tempo.cpp
EmCpp/SimuladosFase1/Fase1Nivel22023/: contas.cpp  leilao.cpp  toupeira.cpp
EmCpp/SimuladosFase1/Fase1Nivel22025/: festa.cpp
EmCpp/estudos/Básico/: MediaEMediana.cpp  OBI2011SortingNLogN.cpp  VogaisEConsoante.cpp  tempCodeRunnerFile.cpp
EmCpp/estudos/CursoDaNeps/: ApagandoEGanhandoOtimizado.cpp  (+10 more)
EmPyhton(sóOComeço)/Fase 3 nivel 2/: Brigadeiros.py  entrada.txt  tempCodeRunnerFile.py
EmPyhton(sóOComeço)/estudos/: readingBigLines.py  tempCodeRunnerFile.py
Fase 3 nivel 1/: Musical.py
Projetos/: main.cpp  makefile
Projetos/ShadersComCpp/: CMakeLists.txt  fragment.frag  fragment.glsl  main.cpp  readme.md  vcpkg.json  vertex.glsl
Projetos/ShadersComCpp/juliaSet/: fragment.frag
ano2/: escada.cpp  main.cpp  tempCodeRunnerFile.cpp
estudos/: tempCodeRunnerFile.py
(+80 files in other folders)
